--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,7 +29,7 @@
 <!-- Page layout code can be found at https://service-manual.nhs.uk/design-system/styles/layout -->
 {% block content %}
   <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
+    <div class="nhsuk-grid-column-full">
 
       <!-- Change the page title here -->
       <h1>
@@ -41,46 +41,85 @@
       <!-- Styles and components can be found at https://service-manual.nhs.uk/design-system -->
 
       <p class="nhsuk-lede-text">
-        This kit lets you rapidly create HTML prototypes of NHS services.
+        This is the homepage of the Type 1 Opt-out online service only used for user testing purposes.
       </p>
 
       <hr>
 
-      <h2>
-        About this page
-      </h2>
+      <article>
+        <h2 class="nhsuk-u-visually-hidden">Top actions for the team</h2>
+  
+        <ul class="nhsuk-grid-row nhsuk-card-group">
+  
+          <!-- Opt-out main page -->
+          <li class="beta-hub-main-topic nhsuk-grid-column-one-half nhsuk-card-group__item">
+            <div class="nhsuk-card nhsuk-card--clickable ">
+              <div class="nhsuk-card__content beta-card__content">
+                <h2 class="nhsuk-card__heading nhsuk-heading-m">
+                  <a class="nhsuk-card__link" href="/nhsuk-opt-out-of-sharing">
+                    Opt out of sharing your health records
+                  </a>
+                </h2>
+                <div class="nhsuk-card__description"><p>You can change or check your cuttent choice in regards to whether or not your personally identifiable patient data can be shared outside your GP practice for research and planning</p></div>
+                <div class="beta-hub-arrow">
+                  <svg class="nhsuk-icon beta-icon__chevron-right-circle" xmlns="http://www.w3.org/2000/svg" width="27" height="27" aria-hidden="true"><circle cx="13.333" cy="13.333" r="13.333" fill=""/><g data-name="Group 1" fill="none" stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2.667"><path d="M15.438 13l-3.771 3.771"/><path data-name="Path" d="M11.667 9.229L15.438 13"/></g></svg>
+                </div>
+              </div>
+            </div>
+          </li>
 
-      <p>
-        Use this page as the index for your project.
-      </p>
-      
-      <p>
-        You'll find the code for this page at <strong>/app/views/index.html</strong>.
-      </p>
+          <!-- Opt-out option 2 -->
+          <li class="beta-hub-main-topic nhsuk-grid-column-one-half nhsuk-card-group__item">
+            <div class="nhsuk-card nhsuk-card--clickable ">
+              <div class="nhsuk-card__content beta-card__content">
+                <h2 class="nhsuk-card__heading nhsuk-heading-m">
+                  <a class="nhsuk-card__link" href="/type1-question-status">
+                    Opt out of sharing your health records - OPT 2
+                  </a>
+                </h2>
+                <div class="nhsuk-card__description"><p>Click here to test a different option of the Type 1 Opt-out online service</p></div>
+                <div class="beta-hub-arrow">
+                  <svg class="nhsuk-icon beta-icon__chevron-right-circle" xmlns="http://www.w3.org/2000/svg" width="27" height="27" aria-hidden="true"><circle cx="13.333" cy="13.333" r="13.333" fill=""/><g data-name="Group 1" fill="none" stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2.667"><path d="M15.438 13l-3.771 3.771"/><path data-name="Path" d="M11.667 9.229L15.438 13"/></g></svg>
+                </div>
+              </div>
+            </div>
+          </li>
+  
+          <!-- Type 1 Authentication -->
+          <li class="beta-hub-main-topic nhsuk-grid-column-one-half nhsuk-card-group__item">
+            <div class="nhsuk-card nhsuk-card--clickable ">
+              <div class="nhsuk-card__content beta-card__content">
+                <h2 class="nhsuk-card__heading nhsuk-heading-m">
+                  <a class="nhsuk-card__link" href="check-ID">
+                    Your choice: summary
+                  </a>
+                </h2>
+                <div class="nhsuk-card__description"><p>Click here to jump to authentication without reading about Type 1</p></div>
+                <div class="beta-hub-arrow">
+                  <svg class="nhsuk-icon beta-icon__chevron-right-circle" xmlns="http://www.w3.org/2000/svg" width="27" height="27" aria-hidden="true"><circle cx="13.333" cy="13.333" r="13.333" fill=""/><g data-name="Group 1" fill="none" stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2.667"><path d="M15.438 13l-3.771 3.771"/><path data-name="Path" d="M11.667 9.229L15.438 13"/></g></svg>
+                </div>
+              </div>
+            </div>
+          </li>
 
-      <p>
-        There is also an <a href="/page-example">example page</a>, which contains a selection of NHS.UK frontend styles and components.
-      </p>
-
-      <hr>
-
-      <h2>
-        Get started
-      </h2>
-
-      <p>Get started by using the:</p>
-
-      <ul>
-        <li>
-          <a href="/docs/how-tos">how to guides</a>
-        </li>
-        <li>
-          <a href="/docs/page-templates">page templates</a>
-        </li>
-        <li>
-          code snippets for styles and components from the <a href="https://service-manual.nhs.uk/design-system">NHS digital service manual</a>
-        </li>
-      </ul>
+          <!-- NHS App view -->
+          <li class="beta-hub-main-topic nhsuk-grid-column-one-half nhsuk-card-group__item">
+            <div class="nhsuk-card nhsuk-card--clickable ">
+              <div class="nhsuk-card__content beta-card__content">
+                <h2 class="nhsuk-card__heading nhsuk-heading-m">
+                  <a class="nhsuk-card__link" href="NHS-app-view">
+                    NHS App view
+                  </a>
+                </h2>
+                <div class="nhsuk-card__description"><p>Click here to see whet Type 1 would sit on the NHS App</p></div>
+                <div class="beta-hub-arrow">
+                  <svg class="nhsuk-icon beta-icon__chevron-right-circle" xmlns="http://www.w3.org/2000/svg" width="27" height="27" aria-hidden="true"><circle cx="13.333" cy="13.333" r="13.333" fill=""/><g data-name="Group 1" fill="none" stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2.667"><path d="M15.438 13l-3.771 3.771"/><path data-name="Path" d="M11.667 9.229L15.438 13"/></g></svg>
+                </div>
+              </div>
+            </div>
+          </li>
+            
+      </article>
 
       <!-- End of content -->
 
