--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -14,7 +14,7 @@
 
 <!-- Set the page title -->
 {% block pageTitle %}
-  NHS.UK prototype kit
+Type 1 Online Service prototype - May 2022
 {% endblock %}
 
 <!-- Edit the header -->
@@ -22,7 +22,7 @@
 {% block header %}
   {{ header({
     "service": {
-        "name": "Prototype kit",
+        "name": "Type 1 Opt-out: Choose if your GP medical records is shared for research and planning",
         "href": "/"
       },
       "showNav": "false",
