--- a/docs/views/examples/branching/answer-no.html
+++ b/docs/views/examples/branching/answer-no.html
@@ -6,24 +6,38 @@
   Example - Branching - No
 {% endblock %}
 
-{% block content %}
-
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
-
-        <h1 class="nhsuk-heading-l">
-          You answered no
-        </h1>
-
-        <p>
-          You do not know your NHS number.
-        </p>
-
-        {{ backLink({
-          "href": "/examples/branching",
-          "text": "Back to How to do branching"
-        }) }}
-
-    </div>
-  </div>
+{% block outerContent %}
+  {{ backLink({
+    "href": "/type1-question",
+    "text": "Back",
+    "classes": "nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-0"
+  }) }}
 {% endblock %}
+
+{% block content %}
+<div class="nhsuk-grid-row">
+  <div class="nhsuk-grid-column-two-thirds">
+
+    <h1>
+      Review your choice
+    </h1>
+
+    <div class="nhsuk-card">
+      <div class="nhsuk-card__content">
+        <h3 class="nhsuk-card__heading">
+          You answered 'No'
+    
+        </h3>
+        <p class="nhsuk-card__description">You do NOT allow your personally identifiable patient data to be shared outside your GP practice for purposes except your own care to support health and care planning and research. <a href="step1">Change</a></p>
+        <p class="nhsuk-card__description">We will send confirmation of your choice to your phone number ***321 and your email mat***@gmail.com</p>
+      </div>
+    </div>
+
+    <a class="nhsuk-button" href="/request-confirmed-no" class="button">Confirm</a>
+
+  </div>
+
+</div>
+
+{% endblock %}
+
