--- a/docs/views/examples/branching/answer-yes.html
+++ b/docs/views/examples/branching/answer-yes.html
@@ -6,24 +6,36 @@
   Example - Branching - Yes
 {% endblock %}
 
+{% block outerContent %}
+  {{ backLink({
+    "href": "/type1-question",
+    "text": "Back",
+    "classes": "nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-0"
+  }) }}
+{% endblock %}
+
 {% block content %}
+<div class="nhsuk-grid-row">
+  <div class="nhsuk-grid-column-two-thirds">
 
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
+    <h1>
+      Review your choice
+    </h1>
 
-        <h1 class="nhsuk-heading-l">
-          You answered yes
-        </h1>
-
-        <p>
-          You know your NHS number.
-        </p>
-
-        {{ backLink({
-          "href": "/examples/branching",
-          "text": "Back to How to do branching"
-        }) }}
-
+    <div class="nhsuk-card">
+      <div class="nhsuk-card__content">
+        <h3 class="nhsuk-card__heading">
+          You answered 'Yes'
+    
+        </h3>
+        <p class="nhsuk-card__description">You allow your personally identifiable patient data to be shared outside your GP practice for purposes except your own care to support health and care planning and research. <a href="step1">Change</a></p>
+        <p class="nhsuk-card__description">We will send confirmation of your choice to your phone number ***321 and your email mat***@gmail.com</p>
+      </div>
     </div>
+
+    <a class="nhsuk-button" href="/request-confirmed-yes" class="button">Confirm</a>
   </div>
+
+</div>
+
 {% endblock %}
