--- a/docs/views/examples/passing-data/passing-data-enter-security-code.html
+++ b/docs/views/examples/passing-data/passing-data-enter-security-code.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-  What is your name? - Passing data example
+  Enter security code - Passing data example
 {% endblock %}
 
 {% block beforeContent %}
@@ -22,28 +22,25 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="/examples/passing-data/passing-data-question-dob" method="post" autocomplete="off">
+      <form action="/check-your-status-type1" method="post" autocomplete="off">
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
             <h1 class="nhsuk-fieldset__heading">
-              Enter your name
+              Enter your security code
             </h1>
           </legend>
-          <div class="nhsuk-form-group">
-            <label class="nhsuk-label" for="first-name">
-              First name
-            </label>
-            <input class="nhsuk-input nhsuk-u-width-three-quarters" id="first-name" name="first-name" value="{{ data['first-name'] }}" type="text">
+          <div class="nhsuk-hint nhsuk-u-margin-bottom-2" for="securitycode">
+            We sent you security code by text to ***321.
           </div>
           <div class="nhsuk-form-group">
-            <label class="nhsuk-label" for="last-name">
-              Last name
-            </label>
-            <input class="nhsuk-input nhsuk-u-width-three-quarters" id="last-name" name="last-name" value="{{ data['last-name'] }}" type="text">
+            <input class="nhsuk-input nhsuk-input--width-10" id="securitycode" name="securitycode" type="text" aria-describedby="nhsnumber" inputmode="numeric">
           </div>
         </fieldset>
-        <button class="nhsuk-button">Continue</button>
+        <button class="nhsuk-button">Submit</button>
       </form>
+      <p>
+        Didn't get your security code? <a href="">Resend code</a>
+      </p>
 
     </div>
   </div>
