--- a/docs/views/examples/passing-data/passing-data-question-nhs-number.html
+++ b/docs/views/examples/passing-data/passing-data-question-nhs-number.html
@@ -22,24 +22,18 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="/examples/passing-data/passing-data-question-dob" method="post" autocomplete="off">
+      <form action="/examples/passing-data/passing-data-check-answers" method="post" autocomplete="off">
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
             <h1 class="nhsuk-fieldset__heading">
-              Enter your name
+              Enter your NHS number
             </h1>
           </legend>
-          <div class="nhsuk-form-group">
-            <label class="nhsuk-label" for="first-name">
-              First name
-            </label>
-            <input class="nhsuk-input nhsuk-u-width-three-quarters" id="first-name" name="first-name" value="{{ data['first-name'] }}" type="text">
+          <div class="nhsuk-hint nhsuk-u-margin-bottom-2" for="nhsnumber">
+            This is a 10 digit number, like 485 777 3456.
           </div>
           <div class="nhsuk-form-group">
-            <label class="nhsuk-label" for="last-name">
-              Last name
-            </label>
-            <input class="nhsuk-input nhsuk-u-width-three-quarters" id="last-name" name="last-name" value="{{ data['last-name'] }}" type="text">
+            <input class="nhsuk-input nhsuk-input--width-10" id="nhsnumber" name="nhsnumber" type="text" aria-describedby="nhsnumber" inputmode="numeric">
           </div>
         </fieldset>
         <button class="nhsuk-button">Continue</button>
