--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -22,7 +22,7 @@ Type 1 Online Service prototype - May 2022
 {% block header %}
   {{ header({
     "service": {
-        "name": "Type 1 Opt-out: Choose if your GP medical records is shared for research and planning",
+        "name": "Choose if your GP medical records is shared for research and planning",
         "href": "/"
       },
       "showNav": "false",
