--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,128 +1,51 @@
-<!-- Use this page as the index for your project -->
-
-<!-- ADDING CUSTOM CSS - Add your custom CSS or Sass in /app/assets/sass/main.scss -->
-
-<!-- Extends the layout from /views/layout.html -->
 {% extends 'layout.html' %}
-<!-- 
-  In /views/layout.html you can:
-    - change the header and footer 
-    - add custom CSS and JavaScript
--->
 
-<!-- Set the page title -->
 {% block pageTitle %}
-  NHS.UK prototype kit
+  Type 1 Opt-Out
 {% endblock %}
 
-<!-- For adding a breadcrumb -->
-<!-- Code examples can be found at https://service-manual.nhs.uk/design-system/components/breadcrumbs -->
 {% block beforeContent %}
+  {{ breadcrumb({
+    href: "/",
+    text: "Home"
+  }) }}
 {% endblock %}
 
-<!-- For adding a back link -->
-<!-- Code examples can be found at https://service-manual.nhs.uk/design-system/components/back-link -->
-{% block outerContent %}
-{% endblock %}
-
-<!-- For adding page content -->
-<!-- Page layout code can be found at https://service-manual.nhs.uk/design-system/styles/layout -->
 {% block content %}
   <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-full">
+    <div class="nhsuk-grid-column-two-thirds">
 
-      <!-- Change the page title here -->
       <h1>
-        NHS.UK prototype kit
-        <span class="nhsuk-caption-xl nhsuk-caption--bottom">Version {{version}}</span>
+        Type 1 Opt-Out
+        <span class="nhsuk-caption-xl nhsuk-caption--bottom ">
+          Environments
+        </span>
       </h1>
 
-      <!-- Add your content here -->
-      <!-- Styles and components can be found at https://service-manual.nhs.uk/design-system -->
-
-      <p class="nhsuk-lede-text">
-        This is the homepage of the Type 1 Opt-out online service only used for user testing purposes.
-      </p>
-
-      <hr>
-
-      <article>
-        <h2 class="nhsuk-u-visually-hidden">Top actions for the team</h2>
-  
-        <ul class="nhsuk-grid-row nhsuk-card-group">
-  
-          <!-- Opt-out main page -->
-          <li class="beta-hub-main-topic nhsuk-grid-column-one-half nhsuk-card-group__item">
-            <div class="nhsuk-card nhsuk-card--clickable ">
-              <div class="nhsuk-card__content beta-card__content">
-                <h2 class="nhsuk-card__heading nhsuk-heading-m">
-                  <a class="nhsuk-card__link" href="/nhsuk-opt-out-of-sharing">
-                    Opt out of sharing your health records
-                  </a>
-                </h2>
-                <div class="nhsuk-card__description"><p>You can change or check your cuttent choice in regards to whether or not your personally identifiable patient data can be shared outside your GP practice for research and planning</p></div>
-                <div class="beta-hub-arrow">
-                  <svg class="nhsuk-icon beta-icon__chevron-right-circle" xmlns="http://www.w3.org/2000/svg" width="27" height="27" aria-hidden="true"><circle cx="13.333" cy="13.333" r="13.333" fill=""/><g data-name="Group 1" fill="none" stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2.667"><path d="M15.438 13l-3.771 3.771"/><path data-name="Path" d="M11.667 9.229L15.438 13"/></g></svg>
-                </div>
-              </div>
-            </div>
-          </li>
-
-          <!-- Opt-out option 2 -->
-          <li class="beta-hub-main-topic nhsuk-grid-column-one-half nhsuk-card-group__item">
-            <div class="nhsuk-card nhsuk-card--clickable ">
-              <div class="nhsuk-card__content beta-card__content">
-                <h2 class="nhsuk-card__heading nhsuk-heading-m">
-                  <a class="nhsuk-card__link" href="/type1-question-status">
-                    Opt out of sharing your health records - OPT 2
-                  </a>
-                </h2>
-                <div class="nhsuk-card__description"><p>Click here to test a different option of the Type 1 Opt-out online service</p></div>
-                <div class="beta-hub-arrow">
-                  <svg class="nhsuk-icon beta-icon__chevron-right-circle" xmlns="http://www.w3.org/2000/svg" width="27" height="27" aria-hidden="true"><circle cx="13.333" cy="13.333" r="13.333" fill=""/><g data-name="Group 1" fill="none" stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2.667"><path d="M15.438 13l-3.771 3.771"/><path data-name="Path" d="M11.667 9.229L15.438 13"/></g></svg>
-                </div>
-              </div>
-            </div>
-          </li>
-  
-          <!-- Type 1 Authentication -->
-          <li class="beta-hub-main-topic nhsuk-grid-column-one-half nhsuk-card-group__item">
-            <div class="nhsuk-card nhsuk-card--clickable ">
-              <div class="nhsuk-card__content beta-card__content">
-                <h2 class="nhsuk-card__heading nhsuk-heading-m">
-                  <a class="nhsuk-card__link" href="check-ID">
-                    Your choice: summary
-                  </a>
-                </h2>
-                <div class="nhsuk-card__description"><p>Click here to jump to authentication without reading about Type 1</p></div>
-                <div class="beta-hub-arrow">
-                  <svg class="nhsuk-icon beta-icon__chevron-right-circle" xmlns="http://www.w3.org/2000/svg" width="27" height="27" aria-hidden="true"><circle cx="13.333" cy="13.333" r="13.333" fill=""/><g data-name="Group 1" fill="none" stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2.667"><path d="M15.438 13l-3.771 3.771"/><path data-name="Path" d="M11.667 9.229L15.438 13"/></g></svg>
-                </div>
-              </div>
-            </div>
-          </li>
-
-          <!-- NHS App view -->
-          <li class="beta-hub-main-topic nhsuk-grid-column-one-half nhsuk-card-group__item">
-            <div class="nhsuk-card nhsuk-card--clickable ">
-              <div class="nhsuk-card__content beta-card__content">
-                <h2 class="nhsuk-card__heading nhsuk-heading-m">
-                  <a class="nhsuk-card__link" href="NHS-app-view">
-                    NHS App view
-                  </a>
-                </h2>
-                <div class="nhsuk-card__description"><p>Click here to see whet Type 1 would sit on the NHS App</p></div>
-                <div class="beta-hub-arrow">
-                  <svg class="nhsuk-icon beta-icon__chevron-right-circle" xmlns="http://www.w3.org/2000/svg" width="27" height="27" aria-hidden="true"><circle cx="13.333" cy="13.333" r="13.333" fill=""/><g data-name="Group 1" fill="none" stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2.667"><path d="M15.438 13l-3.771 3.771"/><path data-name="Path" d="M11.667 9.229L15.438 13"/></g></svg>
-                </div>
-              </div>
-            </div>
-          </li>
-            
-      </article>
-
-      <!-- End of content -->
-
+      {{ contentsList({
+        items: [
+          {
+            href: "/prototype-index",
+            text: "Prototype"
+          },
+          {
+            href: "/dev-index",
+            text: "Development"
+          },
+          {
+            href: "/test-index",
+            text: "Test"
+          },
+          {
+            href: "/prod-index",
+            text: "Production"
+          },
+          {
+            href: "/data-index",
+            text: "Test Data"
+          }
+        ]
+      }) }}
     </div>
   </div>
 {% endblock %}
