Added configuration landing page

--- a/src/prototype/app/views/index.html
+++ b/src/prototype/app/views/index.html
@@ -38,8 +38,8 @@
             text: "Production"
           },
           {
-            href: "/landing-page-test-data",
-            text: "Test Data"
+            href: "/landing-page-config",
+            text: "Configuration"
           }
         ]
       }) }}
