--- a/src/prototype/app/views/landing-page-config.html
+++ b/src/prototype/app/views/landing-page-config.html
@@ -1,13 +1,19 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-  Type 1 Opt-Out
+  Type 1 Opt-Out - Configuration
 {% endblock %}
 
 {% block beforeContent %}
   {{ breadcrumb({
-    href: "/",
-    text: "Home"
+    items: [
+    {
+      text: "Home",
+      href: "/"
+    }
+  ],
+  text: "Configuration",
+      href: "/landing-page-config"
   }) }}
 {% endblock %}
 
@@ -16,26 +22,22 @@
     <div class="nhsuk-grid-column-two-thirds">
 
       <h1>
-        Test Data
+        Configuration
       </h1>
 
       {{ contentsList({
         items: [
           {
-            href: "/landing-page-patients",
-            text: "Patients"
+            href: "/landing-page-config-app",
+            text: "Application"
           },
           {
-            href: "/landing-page-practices",
-            text: "Practices"
+            href: "/landing-page-config-content",
+            text: "Content"
           },
           {
-            href: "/landing-page-system-suppliers",
-            text: "System Suppliers"
-          },
-          {
-            href: "/index",
-            text: "Environments"
+            href: "/landing-page-config-test-data",
+            text: "Test Data"
           }
         ]
       }) }}
