--- a/src/prototype/app/views/index.html
+++ b/src/prototype/app/views/index.html
@@ -30,15 +30,15 @@
             text: "Development"
           },
           {
-            href: "/landing-page-test",
-            text: "Test"
+            href: "/landing-page-release-1",
+            text: "Release 1.0 (stable)"
           },
           {
             href: "/landing-page-prod",
             text: "Production"
           },
           {
-            href: "/landing-page-config",
+            href: "/config/landing-page-config",
             text: "Configuration"
           }
         ]
