--- a/src/prototype/app/views/layout.html
+++ b/src/prototype/app/views/layout.html
@@ -14,7 +14,7 @@
 
 <!-- Set the page title -->
 {% block pageTitle %}
-Type 1 Online Service prototype - May 2022
+  Type 1 Opt-Out
 {% endblock %}
 
 <!-- Edit the header -->
@@ -22,7 +22,7 @@ Type 1 Online Service prototype - May 2022
 {% block header %}
   {{ header({
     "service": {
-        "name": "Test header: Choose if your GP medical records is shared for research and planning",
+        "name": "Choose if your GP medical records is shared for research and planning",
         "href": "/"
       },
       "showNav": "false",
@@ -39,10 +39,6 @@ Type 1 Online Service prototype - May 2022
       {
         "URL": "/",
         "label": "Home"
-      },
-      {
-        "URL": "/page-example",
-        "label": "Example page"
       }
     ]
   })}}
