--- a/src/prototype/app/views/config/test-data.html
+++ b/src/prototype/app/views/config/test-data.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-  Type 1 Opt-Out - Configuration
+  Type 1 Opt-Out - Test Data
 {% endblock %}
 
 {% block beforeContent %}
@@ -10,10 +10,14 @@
     {
       text: "Home",
       href: "/"
+    },
+    {
+      text: "Configuration",
+      href: "/landing-page-config"
     }
   ],
-  text: "Configuration",
-      href: "/landing-page-config"
+  href: "/landing-page-config-test-data",
+  text: "Test Data"
   }) }}
 {% endblock %}
 
@@ -22,22 +26,22 @@
     <div class="nhsuk-grid-column-two-thirds">
 
       <h1>
-        Configuration
+        Test Data
       </h1>
 
       {{ contentsList({
         items: [
           {
-            href: "/landing-page-config-app",
-            text: "Application"
+            href: "/config/patient-search",
+            text: "Patients"
           },
           {
-            href: "/landing-page-config-content",
-            text: "Content"
+            href: "/landing-page-practices",
+            text: "Practices"
           },
           {
-            href: "/landing-page-config-test-data",
-            text: "Test Data"
+            href: "/landing-page-system-suppliers",
+            text: "System Suppliers"
           }
         ]
       }) }}
