Configured jest for unit tests

--- a/src/prototype/app/views/index.html
+++ b/src/prototype/app/views/index.html
@@ -26,7 +26,7 @@
             text: "Prototype"
           },
           {
-            href: "/landing-page-dev",
+            href: "/frontend_index.html",
             text: "Development"
           },
           {
