Adjusted patient search page

--- a/src/prototype/app/views/config/patient-search.html
+++ b/src/prototype/app/views/config/patient-search.html
@@ -57,7 +57,7 @@
             <input class="nhsuk-input nhsuk-u-width-three-quarters" id="last-name" name="last-name" value="{{ data['last-name'] }}" type="text">
           </div>
         </fieldset>
-        <button class="nhsuk-button">Search</button>
+        <button class="nhsuk-button" href="/config/patient-edit">Search</button>
         <button class="nhsuk-button">Clear</button>
         <button class="nhsuk-button">Add New</button>
       </form>
