Installed local packages for react apps

--- a/src/prototype/docs/assets/sass/nhsuk.scss
+++ b/src/prototype/docs/assets/sass/nhsuk.scss
@@ -1,4 +1,4 @@
-@import 'node_modules/nhsuk-frontend/packages/core/settings/colours';
+@import '../../node_modules/nhsuk-frontend/packages/core/settings/colours';
 
 // ==========================================================================
 // New 'beta' header
