Extracted stylesheets from nhsuk-frontend package

--- a/src/prototype/docs/assets/sass/docs.scss
+++ b/src/prototype/docs/assets/sass/docs.scss
@@ -1,5 +1,5 @@
 // NHS.UK frontend library
-@import '../../node_modules/nhsuk-frontend/packages/nhsuk';
+@import 'nhsuk';
 
 // ==========================================================================
 // FRONTEND STYLE ADJUSTMENTS
