--- a/src/prototype/app/assets/sass/main.scss
+++ b/src/prototype/app/assets/sass/main.scss
@@ -1,5 +1,6 @@
 // Import NHS.UK frontend library
-@import '../../node_modules/nhsuk-frontend/packages/nhsuk';
+// @import '../../node_modules/nhsuk-frontend/packages/nhsuk';
+@import 'nhsuk';
 
 // Components that are not in the NHS.UK frontend library
 @import 'components/list-border';
