Added accessibility link

--- a/src/frontend/src/App.scss
+++ b/src/frontend/src/App.scss
@@ -1,41 +1,51 @@
 @import "nhsuk-frontend/packages/nhsuk.scss";
 
-#root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
-  }
-  
-  .logo {
-    height: 6em;
-    padding: 1.5em;
-    will-change: filter;
-  }
-  .logo:hover {
-    filter: drop-shadow(0 0 2em #646cffaa);
-  }
-  
-  @keyframes logo-spin {
-    from {
-      transform: rotate(0deg);
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+@keyframes fadeOut {
+    from { opacity: 1; }
+    to { opacity: 0; }
+}
+
+.nhsuk-alert {
+    @include nhsuk-responsive-margin(2, "top");
+    @include nhsuk-responsive-margin(4, "bottom");
+    @include nhsuk-responsive-padding(3);
+    @include nhsuk-typography-responsive(19);
+
+    background-color: $color_nhsuk-grey-4;
+    border-left: 5px solid $color_nhsuk-grey-2;
+    opacity: 1;
+    animation: fadeIn 300ms ease-in-out forwards;
+    outline: none;
+
+    @media(prefers-reduced-motion) {
+        animation: none;
     }
-    to {
-      transform: rotate(360deg);
+
+    p {
+        margin-bottom: 0;
     }
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    a:nth-of-type(2) .logo {
-      animation: logo-spin infinite 20s linear;
+
+    &--success {
+        border-left-color: $color_nhsuk-green;
+        background-color: tint($color_nhsuk-green, 75);
     }
-  }
-  
-  .card {
-    padding: 2em;
-  }
-  
-  .read-the-docs {
-    color: #888;
-  }
-  
+
+    &--info {
+        border-left-color: $color_nhsuk-blue;
+        background-color: tint($color_nhsuk-blue, 75);
+    }
+
+    &--fade {
+        animation: fadeOut 150ms ease-in-out forwards;
+
+        @media(prefers-reduced-motion) {
+            animation: none;
+            visibility: hidden;
+        }
+    }
+}
