--- a/src/prototype/app/views/index.html
+++ b/src/prototype/app/views/index.html
@@ -26,7 +26,7 @@
             text: "Prototype"
           },
           {
-            href: "/frontend_index.html",
+            href: "/frontend/index.html",
             text: "Development"
           },
           {
@@ -38,7 +38,7 @@
             text: "Production"
           },
           {
-            href: "/config/landing-page-config",
+            href: "/config/index.html",
             text: "Configuration"
           }
         ]
