Made href of Local landing page absolute

--- a/src/prototype/app/views/index.html
+++ b/src/prototype/app/views/index.html
@@ -22,7 +22,7 @@
       {{ contentsList({
         items: [
           {
-            href: "/landing-page-apps",
+            href: "http://localhost:3000/landing-page-apps",
             text: "Local"
           },
           {
