Fixed environment URLS

--- a/src/prototype/app/views/index.html
+++ b/src/prototype/app/views/index.html
@@ -26,15 +26,15 @@
             text: "Local"
           },
           {
-            href: "https://type1-opt-out-develop.herokuapp.com",
+            href: "https://type1-opt-out-develop.herokuapp.com/landing-page-apps",
             text: "Development"
           },
           {
-            href: "https://type1-opt-out-release-1.herokuapp.com",
+            href: "https://type1-opt-out-release-1.herokuapp.com/landing-page-apps",
             text: "Release 1.0 (stable)"
           },
           {
-            href: "https://type1-opt-out.herokuapp.com",
+            href: "https://type1-opt-out.herokuapp.com/landing-page-apps",
             text: "Production"
           }
         ]
