--- a/src/prototype/app/views/landing-page-apps.html
+++ b/src/prototype/app/views/landing-page-apps.html
@@ -29,11 +29,15 @@
         items: [
           {
             href: "/landing-page-prototype",
-            text: "Prototype"
+            text: "Prototype A (control)"
+          },
+          {
+            href: "/landing-page-prototype",
+            text: "Prototype B (variant)"
           },
           {
             href: "/frontend/index.html",
-            text: "Type 1 Opt-Out"
+            text: "Type 1 Opt-Out React App"
           },
           {
             href: "/config/index.html",
