--- a/src/prototype/app/views/landing-page-prototype.html
+++ b/src/prototype/app/views/landing-page-prototype.html
@@ -18,8 +18,12 @@
   {{ breadcrumb({
     items: [
     {
-      text: "Home",
+      text: "Environments",
       href: "/"
+    },
+    {
+      text: "Apps",
+      href: "/landing-page-apps"
     }
   ],
   text: "Prototype",
